// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaRugbySummary should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa kzAIuV"
  >
    <div
      class="sc-bxivhb sc-ifAKCX elsoGX"
    />
    <div
      class="sc-bwzfXH eSqyJ"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaRugbySummary should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa kzAIuV"
  >
    <div
      class="sc-bxivhb sc-ifAKCX elsoGX"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;
